--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsCategory/contentPath.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsCategory/contentPath.html
@@ -1,6 +1,5 @@
 <h2 class="contentTitle"><#if site.useStatic>
-使用静态化路径时，请配置所有分类模型映射模板路径。使用动态路径时，请将模板名改为可动态访问的模板名，清空静态化模板路径。
-使用静态化时，请您选择静态化路径，并配置分类模型映射模板路径。使用动态路径时，请将模板名改为可动态访问的模板名，清空所有分类模型映射模板路径。<#else>请选择内容路径，然后将模板名改为可动态访问的模板名。</#if></h2>
+使用静态化路径时，请配置所有分类模型映射模板路径。使用动态路径时，请将模板名改为可动态访问的模板名，清空所有分类模型映射模板路径。<#else>请选择内容路径，然后将模板名改为可动态访问的模板名。</#if></h2>
 <div class="pageFormContent" layoutH="60">
 	<ul class="tree treeFolder expand">
 		<li>
