--- a/data/publiccms/template/site_1/weixin/event.subscribe.html
+++ b/data/publiccms/template/site_1/weixin/event.subscribe.html
@@ -1,7 +1,7 @@
 <xml>
 	<ToUserName><![CDATA[${xml.xml.FromUserName}]]></ToUserName>
 	<FromUserName><![CDATA[${xml.xml.ToUserName}]]></FromUserName>
-	<CreateTime>${getDateNumber(.now)}</CreateTime>
+	<CreateTime>${.now?long}</CreateTime>
 	<MsgType><![CDATA[text]]></MsgType>
 	<Content><![CDATA[welcome!]]></Content>
 	<FuncFlag>0</FuncFlag>
