--- a/publiccms-parent/publiccms-core/src/main/resources/initialization/template/license.html
+++ b/publiccms-parent/publiccms-core/src/main/resources/initialization/template/license.html
@@ -1,11 +1,11 @@
 一、授权许可
   1.1 您可以免费修改、复制、分发本软件及本软件的源码
   1.2 您可以免费获得的基于免费协议的授权文件，并获得非商业用途的使用权限
-  1.3 所有免费授权用户，基于本软件开发的页面必须在显著位置添加Powered by Public CMS标识，并保留产品中的授权及logo等标识
-  1.4 在您将本软件用作商业用途时，需要取得软件版权方商业使用授权
+  1.3 所有免费授权用户，基于本软件开发的页面必须在显著位置添加Powered by PublicCMS标识，并保留产品中的授权及logo等标识
+  1.4 在将本软件用作商业用途时，需要取得软件版权方商业使用授权，授权单位应为最终使用产品的用户单位
   1.5 已获得商业授权的用户可以使用、复制、修改、分发本软件(含源码)及包含本软件(含源码)的产品
 二、版权
-  2.1 该软件版权归PublicCMS官方所有。
+  2.1 该软件版权归PublicCMS官方所有
 三、免责声明
-  3.1 本软件及所附带的文件是作为不提供任何明确的或隐含的赔偿或担保的形式提供的。
-  3.2 用户出于自愿而使用本软件，您必须了解使用本软件的风险，在尚未购买产品技术服务之前，我们不承诺提供任何形式的技术支持、使用担保，也不承担任何因使用本软件而产生问题的相关责任。
+  3.1 本软件及所附带的文件是作为不提供任何明确的或隐含的赔偿或担保的形式提供的
+  3.2 用户出于自愿而使用本软件，您必须了解使用本软件的风险，在尚未购买产品技术服务之前，我们不承诺提供任何形式的技术支持、使用担保，也不承担任何因使用本软件而产生问题的相关责任
