--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsPlace/list.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsPlace/list.html
@@ -15,7 +15,7 @@
 					<#elseif 0=((metaDataMap[a.fileName].size)!0)>
 						<a href="cmsPlace/publish_place.html?path=${path}" target="ajax" rel="placeBox">${(metaDataMap[a.fileName].alias)!a.fileName}</a>
 					<#else>
-						<a href="cmsPlace/dataList.html?path=${path}" target="navTab" rel="cmsPlace/dataList">${(metaDataMap[a.fileName].alias)!a.fileName} (${(metaDataMap[a.fileName].size)!}) ${(metaDataMap[a.fileName].allowContribute?then('允许投稿',''))!}</a>
+						<a href="cmsPlace/dataList.html?path=${path}" target="navTab" rel="cmsPlace/dataList">${(metaDataMap[a.fileName].alias)!a.fileName} (推荐位)</a>
 					</#if>
 				</li>
 			</#if>
