--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/placeTemplate/metadata.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/placeTemplate/metadata.html
@@ -103,7 +103,15 @@ checkPageSize();
 <#list page.list>
 	<ul>
 	<#items as a>
-		<li><a href="${site.dynamicPath}place/redirect.do?id=${a.id!}" target="_blank">${a.title}</a></li>
+		<li>
+		    <#-- ${a.url} 为不带计数的链接 -->
+            <a href="${site.dynamicPath}place/redirect.do?id=${a.id!}" target="_blank">
+				<figure>
+	                <img src="${site.sitePath+a.cover!}">
+	                <figcaption>${a.title}</figcaption>
+	            </figure>
+	        </a>
+        </li>
 	</#items>
 	</ul>
 </#list>
