--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/main.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/main.html
@@ -107,7 +107,7 @@
 	<div class="unit">
 		<p id="cmsVersion">
 			<label>Public CMS:</label>
-			<a href="http://www.publiccms.com/" target="navTab" rel="publiccms.com" icon="<i class='icon-home icon-large'></i>" title="PublicCMS官网">${cms}</a>
+			<a href="//www.publiccms.com/" target="navTab" rel="publiccms.com" icon="<i class='icon-home icon-large'></i>" title="PublicCMS官网">${cms}</a>
 		</p>
 	<@_sysAuthorized roleIds=admin.roles url='sysCluster/list'>
 		<p>
