--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsTemplate/ftlLookup.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsTemplate/ftlLookup.html
@@ -30,9 +30,9 @@ function check(){
 }
 function use(path,description){
 	if('include'==$('input[name=use]:checked',$.pdialog.getCurrent()).val()){
-		${editor!'cmsTemplateEditor'}.replaceSelection('${r'<@include path="'?no_esc}'+path+'${r'"/>'?no_esc}'+description);
+		DWZ.codemirror.instances[$('textarea.code',navTab.getCurrentPanel()).data('id')].replaceSelection('${r'<@include path="'?no_esc}'+path+'${r'"/>'?no_esc}'+description);
 	} else {
-		${editor!'cmsTemplateEditor'}.replaceSelection('${r'<@import path="'?no_esc}'+path+'" namespace="'+$('input[name=namespace]',$.pdialog.getCurrent()).val()+'"${r'/>'?no_esc}'+description);
+		DWZ.codemirror.instances[$('textarea.code',navTab.getCurrentPanel()).data('id')].replaceSelection('${r'<@import path="'?no_esc}'+path+'" namespace="'+$('input[name=namespace]',$.pdialog.getCurrent()).val()+'"${r'/>'?no_esc}'+description);
 	}
 }
 </script>
@@ -52,6 +52,6 @@ function use(path,description){
 		</dd>
 	</dl>
 	<ul class="tree treeFolder">
-<@chipTree 'ftl'/>
+<@chipTree ''/>
 	</ul>
 </div>
