--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/index.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/index.html
@@ -3,9 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<title>管理后台 - ${site.name}</title>
+	<link href="${res}/codemirror/lib/codemirror.css" rel="stylesheet" >
+    <link href="${res}/codemirror/addon/hint/show-hint.css" rel="stylesheet" >
 	<link href="${res}/themes/css/core.css" rel="stylesheet" media="screen"/>
 	<link href="${res}/themes/css/print.css" rel="stylesheet" media="print"/>
-	<link href="${res}/font-awesome/css/font-awesome.min.css" rel="stylesheet" >
+	<link href="${res}/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
 	<!--[if IE 7]>
 	<link href="${res}/font-awesome/css/font-awesome-ie7.min.css" rel="stylesheet" >
 	<![endif]-->
@@ -22,15 +24,6 @@
 	<script src="${res}/js/dwz.min.js"></script>
 	<script src="${res}/js/dwz.regional.zh.js"></script>
 
-	<link href="${res}/codemirror/lib/codemirror.css" rel="stylesheet" type="text/css" />
-	<script src="${res}/codemirror/lib/codemirror.js"></script>
-	<script src="${res}/codemirror/mode/xml/xml.js"></script>
-	<script src="${res}/codemirror/mode/javascript/javascript.js"></script>
-	<script src="${res}/codemirror/mode/css/css.js"></script>
-	<script src="${res}/codemirror/mode/htmlmixed/htmlmixed.js"></script>
-	<script src="${res}/codemirror/mode/freemarker/freemarker.js"></script>
-	<script src="${res}/codemirror/mode/freemarkermixed/freemarkermixed.js"></script>
-	<script src="${res}/codemirror/mode/nginx/nginx.js"></script>
 	<script>
 	var base="${base}/admin";
 	window.UEDITOR_HOME_URL="${res}/ueditor/";
@@ -39,6 +32,10 @@ $(function(){
 	DWZ.init("${res}/dwz.frag.html", {
 		ckeditorResources:["${res}/ckeditor/ckeditor.js"],
 		ueditorResources:["${res}/ueditor/ueditor.config.js","${res}/ueditor/ueditor.all.min.js","${res}/ueditor/lang/zh-cn/zh-cn.js"],
+		codemirrorResources:['${res}/codemirror/lib/codemirror.js','${res}/codemirror/mode/xml/xml.js','${res}/codemirror/mode/javascript/javascript.js','${res}/codemirror/mode/css/css.js',
+            '${res}/codemirror/mode/htmlmixed/htmlmixed.js','${res}/codemirror/mode/freemarker/freemarker.js','${res}/codemirror/mode/freemarkermixed/freemarkermixed.js',
+            '${res}/codemirror/mode/nginx/nginx.js','${res}/codemirror/addon/hint/show-hint.js','${res}/codemirror/addon/hint/javascript-hint.js','${res}/codemirror/addon/hint/html-hint.js',
+            '${res}/codemirror/addon/hint/css-hint.js','${res}/codemirror/addon/hint/xml-hint.js'],
 		loginUrl:"login_dialog.html", loginTitle:"登录",
 		pageInfo:{pageNum:"pageNum", numPerPage:"numPerPage", orderField:"orderField", orderDirection:"orderType"}, //【可选】
 		debug:false,	// 调试模式 【true|false】
