--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/sysSite/nginxCommon.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/sysSite/nginxCommon.html
@@ -6,7 +6,7 @@
 <div class="pageFormContent" layoutH="60">
 	<dl class="nowrap">
 		<dt>Nginx通用配置:</dt>
-		<dd><textarea id="nginxCommon" name="description" cols="80" rows="20">
+		<dd><textarea name="description" class="code" mode="nginx">
 upstream cms {
 	#这里填写CMS的真实地址和端口,可使用多行以下配置启用集群
 	server localhost:8080  weight=1;
@@ -32,14 +32,4 @@ server {
 			<span class="info">Nginx通用配置应该包含在nginx配置文件 http包中</span>
 		</dd>
 	</dl>
-<script>
-	CodeMirror.fromTextArea(document.getElementById("nginxCommon"), {
-		mode: "nginx",
-		lineNumbers: true,
-        tabSize        : 4,
-        indentUnit     : 4,
-        lineWrapping   : true,
-        indentWithTabs : true
-	});
-</script>
 </div>
