--- a/publiccms-parent/publiccms/src/main/webapp/resource/themes/css/core.css
+++ b/publiccms-parent/publiccms/src/main/webapp/resource/themes/css/core.css
@@ -287,6 +287,7 @@ a.toggleCollapse{ text-decoration:none;}
 .pageFormContent dl.nowrap, .nowrap dl{ width:100%;height:auto;clear:both;}
 #content{width:800px;}
 #content p{float: none;display: block;min-width: initial;padding: 0;}
+.CodeMirror{height:100%;line-height:16px;}
 
 fieldset{ padding:3px;margin:0 0 5px 0;border:1px dotted #B8D0D6;}
 fieldset legend{ padding:2px;border:1px dotted #B8D0D6;font-weight:bold;}
