--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsContent/view.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsContent/view.html
@@ -1,6 +1,5 @@
 <@_content id=id>
 	<#assign a=object/>
-	<#assign id=a.id/>
 	<#assign parentId=a.parentId!/>
 	<#assign categoryId=a.categoryId!/>
 	<#assign modelId=a.modelId!/>
@@ -161,7 +160,7 @@
 			<dl class="nowrap">
 				<dt>图片列表:</dt>
 				<dd>
-			<@_contentFileList contentId=contentId image=true>
+			<@_contentFileList contentId=a.id image=true>
 				<#list page.list as file>
 					<div class="thumbnail">
 						<img src="${site.sitePath+(file.filePath)!}" style="max-width:200px;max-height:200px;"/>
@@ -175,7 +174,7 @@
 				<dl class="nowrap">
 					<dt>附件列表:</dt>
 					<dd>
-				<@_contentFileList contentId=contentId image=false>
+				<@_contentFileList contentId=a.id image=false>
 					<#list page.list as file>
 						<a href="${site.sitePath+(file.url)!}" target="_blank">${(file.url)!}</a>
 					</#list>
