--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsCategoryType/add.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsCategoryType/add.html
@@ -26,7 +26,7 @@
 	</@_sysExtendFieldList>
 </#if>
 			<fieldset>
-				<legend>分类扩展字段</legend>
+				<legend>分类扩展字段(以下字段名无效:title,keywords,description)</legend>
 				<@extends 'categoryExtends' categoryExtendList![]/>
 			</fieldset>
 		</div>
