--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsModel/add.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsModel/add.html
@@ -194,7 +194,7 @@
 	<#assign contentExtendList=a.extendList![]>
 </#if>
 		<fieldset>
-			<legend>内容扩展字段</legend>
+			<legend>内容扩展字段(以下字段名无效:source,sourceUrl,text)</legend>
 			<#include "../include_page/extends.html"/>
 			<@extends 'extendList' contentExtendList![]/>
 		</fieldset>
