--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/sysDept/addUser.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/sysDept/addUser.html
@@ -1,7 +1,7 @@
 <@_sysUser id=id>
 	<#assign a=object/>
-	<@_sysDept id=object.deptId><#assign dept=object/></@_sysDept>
 </@_sysUser>
+<@_sysDept id=(a.deptId)!deptId><#assign dept=object/></@_sysDept>
 <form method="post" action="sysDept/saveUser.do?callbackType=closeCurrent&navTabId=sysDept/userList" class="pageForm required-validate" onsubmit="return validateCallback(this, navTabAjaxDone);">
 	<input name="id" type="hidden" value="${id!}" />
 	<div class="formBar">
