1. 默认从正文中获取内容描述 2. 分页方法getPage增加动态页面分页支持、REST风格支持

--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsLotteryUser/list.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsLotteryUser/list.html
@@ -1,4 +1,4 @@
-<@_lotteryUserList lotteryId=lotteryId userId=userId
+<@_lotteryUserList lotteryId=lotteryId!queryLotteryId userId=userId
             winning=winning startCreateDate=startCreateDate endCreateDate=endCreateDate
             orderType=orderType pageIndex=pageNum count=numPerPage>
 <div class="pageHeader">
@@ -8,7 +8,7 @@
 			<ul class="searchContent">
 				<li>
 					<label>抽奖:</label>
-					<input type="text" name="lotteryId" value="${lotteryId!}" />
+					<input type="text" name="lotteryId" value="${lotteryId!queryLotteryId!}" />
 				</li>
 				<li>
 					<label>用户:</label>
