--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsLottery/add.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsLottery/add.html
@@ -26,29 +26,35 @@
 				<a class="inputDateButton" href="javascript:;" onclick="return false;">选择</a>
 			</dd>
 		</dl>
-		<dl>
-			<dt>奖品总数:</dt>
-			<dd><input class="required digits" name="totalCount" type="number" size="3" value="${(a.totalCount)!}"/></dd>
+		<dl class="nowrap">
+			<dt>奖品总数/剩余:</dt>
+			<dd>
+				<input class="required digits" name="lastGift" type="number" size="3" value="${(a.lastGift)!}"/>
+				<label style="width:2px;">/</label>
+				<input class="required digits" name="totalGift" type="number" size="3" value="${(a.totalGift)!}"/>
+			</dd>
 		</dl>
-		<dl>
-			<dt>每天发放数量:</dt>
-			<dd><input class="required digits" name="dayCount" type="number" size="3" value="${(a.dayCount)!}"/></dd>
-		</dl>
-		<dl>
-			<dt>剩余数量:</dt>
-			<dd><input class="required digits" name="lastCount" type="number" size="3" value="${(a.lastCount)!}"/></dd>
-		</dl>
-		<dl>
-			<dt>每天可抽奖次数:</dt>
-			<dd><input class="required digits" name="lotteryCount" type="text" size="3" value="${(a.lotteryCount)!}"/></dd>
+		<dl class="nowrap">
+			<dt>抽奖次数:</dt>
+			<dd>
+				<input class="required digits" name="lotteryCount" type="number" size="3" value="${(a.lotteryCount)!}"/>
+			</dd>
 		</dl>
 		<dl class="nowrap">
 			<dt>中奖概率:</dt>
-			<dd><input class="required digits" name="fractions" type="text" size="3" value="${(a.fractions)!}"/><label style="width:2px;">/</label><input class="required digits" name="numerator" type="text" size="3" value="${(a.numerator)!}"/></dd>
+			<dd>
+				<input class="required digits" name="fractions" type="number" size="3" value="${(a.fractions)!}"/>
+				<label style="width:2px;">/</label>
+				<input class="required digits" name="numerator" type="number" size="3" value="${(a.numerator)!}"/>
+			</dd>
+		</dl>
+		<dl class="nowrap">
+			<dt>网址:</dt>
+			<dd><input name="url" type="text" maxlength="255" size="60" value="${(a.url)!}"/></dd>
 		</dl>
 		<dl class="nowrap">
 			<dt>描述:</dt>
-			<dd><textarea class="required" name="description" maxlength="300" cols="80" rows="5"/>${(a.description)!}</textarea></dd>
+			<dd><textarea name="description" maxlength="300" cols="80" rows="5"/>${(a.description)!}</textarea></dd>
 		</dl>
 	</div>
 </form>
