--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsLottery/list.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsLottery/list.html
@@ -43,12 +43,10 @@
 				<th>标题</th>
 				<th orderField="startDate" class="<#if orderField??&&'startDate'==orderField><#if 'asc'=orderType>asc<#else>desc</#if><#else>order</#if>">开始日期</th>
 				<th orderField="endDate" class="<#if orderField??&&'endDate'==orderField><#if 'asc'=orderType>asc<#else>desc</#if><#else>order</#if>">结束日期</th>
-				<th>每天发放数量</th>
-				<th>奖品总数</th>
-				<th>剩余数量</th>
-				<th>每天可抽奖次数</th>
+				<th>抽奖次数</th>
+				<th>礼品剩余/总量</th>
 				<th>概率</th>
-				<th>描述</th>
+				<th>操作</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -58,12 +56,10 @@
 				<td>${(a.title)!}</td>
 				<td>${a.startDate!}</td>
 				<td>${a.endDate!}</td>
-				<td>${a.dayCount!}</td>
-				<td>${a.totalCount!}</td>
-				<td>${a.lastCount!}</td>
 				<td>${a.lotteryCount!}</td>
+				<td>${a.lastGift!}/${a.totalGift!}</td>
 				<td>${a.fractions!}/${a.numerator!}</td>
-				<td>${(a.description)!}</td>
+				<td><a href="cmsLotteryUser/list.html?queryLotteryId=${a.id}" target="navTab" rel="cmsLotteryUser/list" icon="<i class='icon-smile icon-large'></i>">抽奖用户管理</a></td>
 			</tr>
 			</#list>
 		</tbody>
