--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsTemplate/metadata.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsTemplate/metadata.html
@@ -51,7 +51,7 @@
 				<dt>需要登录:</dt>
 				<dd>
 					<label><input name="needLogin" type="checkbox"/></label>
-					<span class="info">勾选后当用户未登录时，将跳转到站点配置中配置的登录页面地址</span>
+					<span class="info">勾选后当用户未登录时，将跳转到<a href="sysConfigData/edit.html?code=site" target="navTab" rel="sysConfigData/edit" icon="<i class='icon-edit icon-large'></i> ">站点配置</a>中的登录页面地址</span>
 				</dd>
 			</dl>
 			<dl class="nowrap">
