--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/index.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/index.html
@@ -52,21 +52,25 @@ $(function(){
 	<a class="logo" href="./"><img src="${res}/themes/logo.png"/></a>
 	<ul class="nav">
 		<li><i class="icon-user icon-large"></i> ${(admin.nickName)!}</li>
-		<li>
-			<a href="${site.dynamicPath!}" target="_blank"><i class="icon-home icon-large"></i> 网站首页</a>
+		<li id="switchEnvBox"><i class="icon-wrench icon-large"></i> <a href="javascript:">切换语言</a>
+			<ul>
+				<li><a href="changeLocale?lang=zh" target="ajaxTodo">中文</a></li>
+				<li><a href="changeLocale?lang=en" target="ajaxTodo">English</a></li>
+			</ul>
 		</li>
-	<#if site.useStatic>
 		<li>
-			<a href="${site.sitePath!}" target="_blank"><i class="icon-home icon-large"></i> 静态首页</a>
+			<i class="icon-home icon-large"></i> <a href="${site.dynamicPath!}" target="_blank">网站首页</a> 
+			<#if site.useStatic>
+				| <a href="${site.sitePath!}" target="_blank">静态首页</a>
+			</#if>
 		</li>
-	</#if>
 	<@_sysAuthorized roleIds=admin.roles url='clearCache'>
 		<li>
-			<a href="clearCache" target="ajaxTodo"><i class="icon-refresh icon-large"></i> 刷新缓存</a>
+			<i class="icon-refresh icon-large"></i> <a href="clearCache" target="ajaxTodo">刷新缓存</a>
 		</li>
 	</@_sysAuthorized>
 		<li>
-			<a href="logout"><i class="icon-signout icon-large"></i> 退出</a>
+			<i class="icon-signout icon-large"></i> <a href="logout">退出</a>
 		</li>
 	</ul>
 	<ul id="navMenu">
