--- a/publiccms-parent/publiccms/src/main/webapp/resource/themes/css/core.css
+++ b/publiccms-parent/publiccms/src/main/webapp/resource/themes/css/core.css
@@ -30,7 +30,11 @@ footer{ text-align:center;width:100%;height:25px;line-height:25px;padding:0 5px;
 header .logo{ float:left;width:200px;height:100%;}
 header .logo img{ width:100%;}
 header .nav{ display:block;float:right;z-index:1;}
-header .nav li{ float:left;padding:0 5px;line-height:37px;}
+header .nav li{ float:left;padding:0 5px;line-height:37px;position: relative;}
+header .nav ul { display:none; width:100px; border:solid 1px #06223e; overflow:hidden; position:absolute; top:30px; right:0;}
+header .nav ul li { margin-top:5px; line-height:26px;}
+header .nav ul li a { color:#000;}
+header .nav .selected ul {display:block;}
 #navMenu{ float:left;display:block;position:absolute;bottom:2px;left:200px;z-index:1;}
 #navMenu li{ float:left;margin:0px 1px;border-style: solid;border-width: 1px;border-radius: 2px;}
 #navMenu li a{ font-size:14px;font-weight:bold;line-height:32px;text-decoration:none;padding:8px 12px;}
