1. 删除分类的内容数字段 2. 修复移动内容时分类显示不全bug

--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsContent/moveParameters.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsContent/moveParameters.html
@@ -1,5 +1,5 @@
 <#macro categoryTree parentId=''>
-	<@_categoryList parentId=parentId>
+	<@_categoryList advanced=true parentId=parentId>
 		<#list page.list as a>
 			<li>
 				<a href="javascript:;" onclick="$('input[name=categoryId]',$.pdialog.getCurrent()).val('${a.id}');$('form',$.pdialog.getCurrent()).submit();" target="ajax">${a.name!}</a>
