--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsWord/add.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsWord/add.html
@@ -1,5 +1,5 @@
 <@_word id=id><#assign a=object/></@_word>
-<form method="post" action="cmsWord/save.do?callbackType=closeCurrent&navTabId=cmsWord/list" class="pageForm required-validate" onsubmit="return validateCallback(this, dialogAjaxDone);">
+<form method="post" action="cmsWord/save.do?callbackType=closeCurrent&navTabId=cmsWord/list" class="pageForm required-validate" onsubmit="return validateCallback(this, navTabAjaxDone);">
 	<input name="id" type="hidden" value="${id!}" />
 	<div class="formBar">
 		<ul>
