--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/index.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/index.html
@@ -52,12 +52,13 @@ $(function(){
 	<a class="logo" href="./"><img src="${res}/themes/logo.png"/></a>
 	<ul class="nav">
 		<li><i class="icon-user icon-large"></i> ${(admin.nickName)!}</li>
-		<li id="switchEnvBox"><i class="icon-wrench icon-large"></i> <a href="javascript:">切换语言</a>
+		<!-- <li id="switchEnvBox"><i class="icon-wrench icon-large"></i> <a href="javascript:">切换语言</a>
 			<ul>
 				<li><a href="changeLocale?lang=zh" target="ajaxTodo">中文</a></li>
 				<li><a href="changeLocale?lang=en" target="ajaxTodo">English</a></li>
 			</ul>
 		</li>
+		-->
 		<li>
 			<i class="icon-home icon-large"></i> <a href="${site.dynamicPath!}" target="_blank">网站首页</a> 
 			<#if site.useStatic>
