--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/sysRole/list.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/sysRole/list.html
@@ -25,7 +25,7 @@
 				<td>${a.id!}</td>
 				<td>${(a.name)!}</td>
 				<td>${a.ownsAllRight?then('是','')}</td>
-				<td>${a.showAllMoudle?then('是','')}</td>
+				<td>${a.showAllModule?then('是','')}</td>
 			</tr>
 			</#list>
 		</tbody>
