--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/sysSite/menu.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/sysSite/menu.html
@@ -11,7 +11,7 @@
 				<a href="sysDomain/list.html" target="navTab" rel="sysDomain/list"><i class="icon-qrcode icon-large"></i> 域名管理</a>
 			</li>
 			<li>
-				<a href="sysMoudle/list.html" target="navTab" rel="sysMoudle/list"><i class="icon-th icon-large"></i> 模块管理</a>
+				<a href="sysModule/list.html" target="navTab" rel="sysModule/list"><i class="icon-th icon-large"></i> 模块管理</a>
 			</li>
 			<li>
 				<a href="sysSite/sql.html" target="navTab" rel="sysSite/sql"><i class="icon-bug icon-large"></i> 执行SQL</a>
