--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/sysModule/add.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/sysModule/add.html
@@ -1,10 +1,10 @@
-<@_sysMoudle id=id>
+<@_sysModule id=id>
 	<#assign a=object/>
 	<#if (object.parentId)??><#assign parentId=(object.parentId)/></#if>
-</@_sysMoudle>
-<@_sysMoudle id=parentId!><#assign moudle=object/></@_sysMoudle>
+</@_sysModule>
+<@_sysModule id=parentId!><#assign module=object/></@_sysModule>
 <#if !deep?has_content><#assign deep=0/><#else><#assign deep=deep?number/></#if>
-<form method="post" action="sysMoudle/save.do?callbackType=closeCurrent&navTabId=sysMoudle/list" class="pageForm required-validate" onsubmit="return validateCallback(this, navTabAjaxDone);">
+<form method="post" action="sysModule/save.do?callbackType=closeCurrent&navTabId=sysModule/list" class="pageForm required-validate" onsubmit="return validateCallback(this, navTabAjaxDone);">
 	<input name="id" type="hidden" value="${id!}" />
 	<div class="formBar">
 		<ul>
@@ -17,8 +17,8 @@
 			<dt>父模块:</dt>
 			<dd>
 				<input name="parentId" type="hidden" value="${parentId!}" />
-				<input name="parentName" readonly="readonly" type="text" size="50" value="${(moudle.name)!}"/>
-				<a class="btnLook" href="sysMoudle/lookup.html" lookupGroup="">选择</a>
+				<input name="parentName" readonly="readonly" type="text" size="50" value="${(module.name)!}"/>
+				<a class="btnLook" href="sysModule/lookup.html" lookupGroup="">选择</a>
 			</dd>
 		</dl>
 		<dl class="nowrap">
@@ -33,7 +33,7 @@
 			<dt>附加图标:</dt>
 			<dd>
 				<input name="attached" type="text" size="50" maxlength="300" value="${(a.attached)!}"/>
-				<a class="btnLook" href="sysMoudle/icons.html?field=attached" lookupGroup="">选择图标</a>
+				<a class="btnLook" href="sysModule/icons.html?field=attached" lookupGroup="">选择图标</a>
 			</dd>
 		</dl>
 	</#if>
