--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/sysModule/list.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/sysModule/list.html
@@ -1,10 +1,10 @@
 <#if parentId?has_content>
-	<@_sysMoudle id=parentId>
+	<@_sysModule id=parentId>
 		<#assign parent=object/>
-	</@_sysMoudle>
+	</@_sysModule>
 </#if>
 <#if !deep?has_content><#assign deep=0/><#else><#assign deep=deep?number/></#if>
-<@_sysMoudleList advanced=true parentId=parentId pageIndex=pageNum count=numPerPage>
+<@_sysModuleList advanced=true parentId=parentId pageIndex=pageNum count=numPerPage>
 <div class="pageHeader">
 	<form id="pagerForm" onsubmit="return navTabSearch(this);" method="post">
 		<#include "../include_page/paramters.html"/>
@@ -24,14 +24,14 @@
 	<div class="panelBar">
 		<ul class="toolBar">
 			<#if parent?has_content>
-				<li><a href="sysMoudle/list.html?parentId=${(parent.parentId)!}&deep=${deep-1}" target="navTab" rel="sysMoudle/list"><i class="icon-circle-arrow-up icon-large"></i> 返回上一级</a></li>
+				<li><a href="sysModule/list.html?parentId=${(parent.parentId)!}&deep=${deep-1}" target="navTab" rel="sysModule/list"><i class="icon-circle-arrow-up icon-large"></i> 返回上一级</a></li>
 				<li class="line">line</li>
 			</#if>
 			<#if deep lte 3>
-				<li><a href="sysMoudle/add.html?parentId=${parentId!}&deep=${deep}" target="navTab" rel="sysMoudle/add"><i class="icon-plus-sign-alt icon-large"></i> 添加模块</a></li>
+				<li><a href="sysModule/add.html?parentId=${parentId!}&deep=${deep}" target="navTab" rel="sysModule/add"><i class="icon-plus-sign-alt icon-large"></i> 添加模块</a></li>
 			</#if>
-			<li><a href="sysMoudle/add.html?id={sid}&deep=${deep}" target="navTab" rel="sysMoudle/edit"><i class="icon-edit icon-large"></i> 修改模块</a></li>
-			<li><a href="sysMoudle/delete.do?id={sid}" title="确定要删除这条记录吗?" target="ajaxTodo"><i class="icon-trash icon-large"></i> 删除</a></li>
+			<li><a href="sysModule/add.html?id={sid}&deep=${deep}" target="navTab" rel="sysModule/edit"><i class="icon-edit icon-large"></i> 修改模块</a></li>
+			<li><a href="sysModule/delete.do?id={sid}" title="确定要删除这条记录吗?" target="ajaxTodo"><i class="icon-trash icon-large"></i> 删除</a></li>
 		</ul>
 	</div>
 	<table class="list" width="100%" layoutH="99">
@@ -48,9 +48,9 @@
 		</thead>
 		<tbody>
 			<#list page.list as a>
-				<@t.merge 'moudleIds' a.parentId!/>
+				<@t.merge 'moduleIds' a.parentId!/>
 			</#list>
-			<@_sysMoudle ids=t.moudleIds!><#assign moudleMap=map!/></@_sysMoudle>
+			<@_sysModule ids=t.moduleIds!><#assign moduleMap=map!/></@_sysModule>
 
 			<#list page.list as a>
 			<tr target="sid" rel="${a.id}">
@@ -58,11 +58,11 @@
 				<td>${a.name!}</td>
 				<td>${a.menu?then('菜单','仅权限')}</td>
 				<td>${a.url!}</td>
-				<td>${(moudleMap[a.parentId?string].name)!}</td>
+				<td>${(moduleMap[a.parentId?string].name)!}</td>
 				<td>${a.sort!}</td>
 				<td>
 					<#if deep lte 2>
-						<a href="sysMoudle/list.html?parentId=${a.id}&deep=${(deep!'0')?number+1}" target="navTab" rel="sysMoudle/list" title="子模块管理">子模块管理</a>
+						<a href="sysModule/list.html?parentId=${a.id}&deep=${(deep!'0')?number+1}" target="navTab" rel="sysModule/list" title="子模块管理">子模块管理</a>
 					</#if>
 				</td>
 			</tr>
@@ -71,4 +71,4 @@
 	</table>
 	<#include "../include_page/page.html"/>
 </div>
-</@_sysMoudleList>
+</@_sysModuleList>
