--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsVote/list.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsVote/list.html
@@ -7,13 +7,7 @@
 		<div class="searchBar">
 			<ul class="searchContent">
 				<li>
-					<label>开始日期:</label>
-					<input type="text" name="startStartDate" class="date" size="10" dateFmt="yyyy-MM-dd" value="${startStartDate!}" />
-					<span>-</span>
-					<input type="text" name="endStartDate" class="date" size="10" dateFmt="yyyy-MM-dd" value="${endStartDate!}" />
-				</li>
-				<li>
-					<label>结束:</label>
+					<label>结束日期:</label>
 					<input type="text" name="startEndDate" class="date" size="10" dateFmt="yyyy-MM-dd" value="${startEndDate!}" />
 					<span>-</span>
 					<input type="text" name="endEndDate" class="date" size="10" dateFmt="yyyy-MM-dd" value="${endEndDate!}" />
@@ -42,9 +36,7 @@
 		<thead>
 			<tr>
 				<th>ID</th>
-				<th orderField="startDate" class="<#if orderField??&&'startDate'==orderField><#if 'asc'=orderType>asc<#else>desc</#if><#else>order</#if>">开始日期</th>
 				<th orderField="endDate" class="<#if orderField??&&'endDate'==orderField><#if 'asc'=orderType>asc<#else>desc</#if><#else>order</#if>">结束</th>
-				<th>时间间隔</th>
 				<th>最大投票数</th>
 				<th>地址</th>
 				<th>标题</th>
@@ -57,9 +49,7 @@
 			<#list page.list as a>
 			<tr target="sid" rel="${a.id}">
 				<td>${a.id!}</td>
-				<td>${a.startDate!}</td>
 				<td>${a.endDate!}</td>
-				<td>${a.intervalHour!}</td>
 				<td>${a.maxVote!}</td>
 				<td>${a.url!}</td>
 				<td>${a.title!}</td>
