--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsTemplate/help.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsTemplate/help.html
@@ -1,7 +1,7 @@
 <#if !task?has_content>
 	<@_metadata path=path><#assign metadata=object/></@_metadata>
 </#if>
-<#macro getAction code description=''>onclick="DWZ.codemirror.instances[$('textarea.code',navTab.getCurrentPanel()).data('id')].replaceSelection('<#if description?has_content><#${r'--'} ${description} ${'--'}>\n</#if>${code?js_string}${description?has_content?then('\\n','')}');$.pdialog.closeCurrent();return false;"</#macro>
+<#macro getAction code description=''>onclick="DWZ.codemirror.instances[$('textarea.code',navTab.getCurrentPanel()).data('id')].replaceSelection('<#if description?has_content>${r'<#--'} ${description} ${r'-->'}\n</#if>${code?js_string}${description?has_content?then('\\n','')}');$.pdialog.closeCurrent();return false;"</#macro>
 <div class="tabs">
 	<div class="tabsHeader">
 		<div class="tabsHeaderContent">
@@ -107,7 +107,7 @@
 						<li><a href="javascript:;" <@getAction r'<@_categoryList parentId=parentId typeId=typeId allowContribute=allowContribute pageIndex=pageIndex count=count><#list page.list as a><a href="${a.url!}">${a.name}</a></#list></@_categoryList>' 'parentId:父分类ID,typeId:分类类型ID,allowContribute:["true":允许投稿,"false":不允许投稿,默认全部],pageIndex:页码,count:每页数据条数'/>>分类</a></li>
 						<li><a href="javascript:;" <@getAction r'<@_categoryTypeList pageIndex=pageIndex count=count><#list page.list as a><a href="${a.url!}">${a.name}</a></#list></@_categoryTypeList>' 'pageIndex:页码,count:每页数据条数'/>>分类类型</a></li>
 						<li><a href="javascript:;" <@getAction r'<@_placeList path=path orderField=orderField orderType=orderType pageIndex=pageIndex count=count><#list page.list as a><a href="${a.url!}">${a.title}</a></#list></@_placeList>'/>>推荐位数据列表</a></li>
-						<li><a href="javascript:;" <@getAction r'<@_search word=word tagId=tagId pageIndex=pageIndex count=count><#list page.list as a><a href="${a.url!}">${a.title}</a></#list></@_search>'/>>搜索</a></li>
+						<li><a href="javascript:;" <@getAction r'<@_search word=word tagId=tagId categoryId=categoryId containChild=containChild categoryIds=categoryIds modelIds=modelIds startPublishDate=startPublishDate pageIndex=pageIndex count=count><#list page.list as a><a href="${a.url!}">${a.title}</a></#list></@_search>' 'word:关键词,tagId:标签ID,categoryId:分类ID,containChild:是否包含子分类,categoryIds:多个分类ID,modelIds:多个模型ID'/>>搜索</a></li>
 						<li><a href="javascript:;" <@getAction r'<@_facetSearch word=word tagId=tagId categoryId=categoryId modelId=modelId pageIndex=pageIndex count=count><#list page.list as a><a href="${a.url!}">${a.title}</a></#list></@_facetSearch>'/>>高级搜索</a></li>
 						<li><a href="javascript:;" <@getAction r'<@_modelList parentId=parentId hasChild=hasChild onlyUrl=onlyUrl hasImages=hasImages hasFiles=hasFiles><#list page.list as a>${a.id}:${a.name}<#sep>,</#list></@_modelList>'/>>模型</a></li>
 					</ul>
