--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/placeTemplate/content.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/placeTemplate/content.html
@@ -1,5 +1,5 @@
 <@_placeMetadata path=path><#assign a=object/></@_placeMetadata>
-<form method="post" action="cmsTemplate/save.do" class="pageForm required-validate" onsubmit="return validateCallback(this, navTabAjaxDone);">
+<form method="post" action="cmsTemplate/savePlace.do" class="pageForm required-validate" onsubmit="return validateCallback(this, navTabAjaxDone);">
 	<div class="formBar">
 		<ul>
 			<#if site.useSsi>
