--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/placeTemplate/content.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/placeTemplate/content.html
@@ -23,7 +23,7 @@
 	</h2>
 	<div class="pageFormContent" layoutH="109">
    		<div>
-			<input name="path" type="hidden" value="${'/include'+path}"/>
+			<input name="path" type="hidden" value="${path}"/>
 			<textarea name="content" class="code" mode="freemarkermixed"><@_templateContent path='/include'+path>${(object)!}</@_templateContent></textarea>
 		</div>
 	</div>
