--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/main.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/main.html
@@ -119,7 +119,7 @@
         <@_disk>
         <p>
             <label>数据目录:</label>
-            <a href="report/cms.html" icon="<i class='icon-check-sign icon-large'></i>" title="系统监控" target="navTab" rel="report/cms" external="true">${(rootPath?js_string)!}</a>
+            <a href="report/cms.html" icon="<i class='icon-check-sign icon-large'></i>" title="系统监控" target="navTab" rel="report/cms" external="true">${(rootPath)!}</a>
         </p>
         <p>
             <label>磁盘空间:</label><@t.fileSize totalSpace/>
