--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsPlace/lookup_content_list.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsPlace/lookup_content_list.html
@@ -1,7 +1,10 @@
-<@_contentList categoryId=categoryId modelId=modelId title=title userId=userId startPublishDate=startPublishDate orderField=orderField orderType=orderType pageIndex=pageNum count=numPerPage>
+<@_contentList categoryId=categoryId modelId=modelId title=title parentId=parentId userId=userId startPublishDate=startPublishDate orderField=orderField orderType=orderType pageIndex=pageNum count=numPerPage>
 <div class="pageHeader">
 	<form id="pagerForm" action="cmsPlace/lookup_content_list.html" onsubmit="return divSearch(this, 'lookup_content_list');" method="post">
 		<#include "../include_page/paramters.html"/>
+		<input type="hidden" name="userId" value="${userId!}"/>
+		<input type="hidden" name="categoryId" value="${categoryId!}"/>
+		<input type="hidden" name="parentId" value="${parentId!}"/>
 		<div class="searchBar">
 			<ul class="searchContent">
 				<li>
@@ -71,17 +74,15 @@
 					</a>
 				</td>
 				<td>
-					<a href="cmsPlace/lookup_content_list.html?userId=${a.userId}" target="ajax" rel="lookup_content_list">
+					<a href="cmsPlace/lookup_content_list.html?userId=${a.userId}&categoryId=${categoryId!}" target="ajax" rel="lookup_content_list">
 						${(userMap[a.userId?string].nickName)!}
 					</a>
 				</td>
 				<td>
-					<a href="cmsPlace/lookup_content_list.html?categoryId=${a.categoryId}" target="ajax" rel="lookup_content_list">
-						${(categoryMap[a.categoryId?string].name)!}
-					</a>
+					${(categoryMap[a.categoryId?string].name)!}
 				</td>
 				<td>
-					<a href="cmsPlace/lookup_content_list.html?modelId=${a.modelId}" target="ajax" rel="lookup_content_list">
+					<a href="cmsPlace/lookup_content_list.html?modelId=${a.modelId}&categoryId=${categoryId!}" target="ajax" rel="lookup_content_list">
 						${(modelMap[a.modelId].name)!}
 					</a>
 				</td>
